--- a/angular-blog/src/app/like/like.component.html
+++ b/angular-blog/src/app/like/like.component.html
@@ -6,7 +6,10 @@
             <img src="../../assets/images/heart.png" >
         </div>
         <ng-template #noLiked>
-            <img src="../../assets/images/heartfill.png">
+            <div>
+              <img src="../../assets/images/heartfill.png">
+
+            </div>
         </ng-template>
       </button>
       <div><p>{{likes.length}}</p></div>
