--- a/angular-blog/src/app/article-editor/article-editor.component.css
+++ b/angular-blog/src/app/article-editor/article-editor.component.css
@@ -21,10 +21,62 @@ body {
 }
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
   width: 1040px;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+:root {
+  --container-height: 498px;
+}
+ul{
+  padding: 0;
+  background-color: #1d1d1d;
+  width: 300px;
+  border-radius: 3px;
+  max-height: 150px;
+  overflow: auto;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f98501; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6a6a6a; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #525252; 
+}
+li{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding:0;
+  list-style:none;
+}
+li p{
+  padding: 0;
+}
+li:hover{
+  background-color: #5f5f5f;
+}
+
 .card {
   margin: 10px;
   background-color: #fff;
@@ -47,93 +99,6 @@ body {
   min-height: 250px;
 }
 
-.tag {
-  background: #cccccc;
-  border-radius: 50px;
-  font-size: 12px;
-  margin: 0;
-  color: #fff;
-  padding: 2px 10px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.tag-teal {
-  background-color: #47bcd4;
-}
-.tag-purple {
-  background-color: #5e76bf;
-}
-.tag-pink {
-  background-color: #cd5b9f;
-}
-
-.card-body p {
-  font-size: 13px;
-  margin: 0 0 40px;
-}
-.user {
-  display: flex;
-  margin-top: auto;
-}
-
-.user img {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-}
-.user-info h5 {
-  margin: 0;
-}
-.user-info small {
-  color: #545d7a;
-}
-.date{
- position: absolute;
- margin-left: 10px;
- margin-top: 5px;
-}
-.blogs-header-wrap{
- width: 100%;
- display: flex;
- flex-direction: row;
- align-items: center;
- padding-left: 100px;
- padding-right: 100px;
-}
-.blogs-header{
- width: 100%;
- display: flex;
- flex-direction: row;
- align-items: center;
- justify-content: space-evenly;
-
-}
-.searching{
- width: 300px;
- border-radius: 5px;
-}
-a {
- color: #000;
- position: relative;
- text-decoration: none;
-}
-
-a::before {
- background: hsl(45 100% 70%);
- content: "";
- inset: 0;
- position: absolute;
- transform: scaleX(0);
- transform-origin: right;
- transition: transform 0.5s ease-in-out;
- z-index: -1;
-}
-
-a:hover::before {
- transform: scaleX(1);
- transform-origin: left;
-}
 
 /* Presentational styles */
 body {
@@ -143,4 +108,179 @@ body {
  font-weight: 800;
  height: 100vh;
  place-items: center;
+}
+.full-height{
+  min-height: 100vh;
+}
+
+
+
+.card-3d-wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 440px;
+  max-width: 100%;
+  height: 400px;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  perspective: 800px;
+  margin-top: 60px;
+}
+.card-3d-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  position:absolute;    
+  top: 0;
+  left: 0;  
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  transition: all 600ms ease-out; 
+}
+.card-front, .card-back {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #1d1d1d;
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: 300%;
+  position: absolute;
+  border-radius: 6px;
+  left: 0;
+  top: 0;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.card-back {
+  transform: rotateY(180deg);
+}
+.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
+  transform: rotateY(180deg);
+}
+.center-wrap{
+  position: absolute;
+  width: 100%;
+  height: 65%;
+  padding: 0 0px;
+  top: 50%;
+  left: 0;
+  transform: translate3d(0, -50%, 35px) perspective(100px);
+  z-index: 20;
+  display: block;
+}
+.form-wrap{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.form-group{ 
+  position: relative;
+  display: flex;
+  flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+.form-style {
+  padding: 5px 0px;
+  padding-left: 20px;
+  height: 48px;
+  width:285px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #000000;
+  background-color: #ffffff;
+  border: none;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+.form-style:focus,
+.form-style:active {
+  border: none;
+  outline: none;
+  box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+}
+.input-icon {
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 48px;
+  font-size: 24px;
+  line-height: 48px;
+  text-align: left;
+  color: #ffeba7;
+  -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+/* Стёр доп классы на инпуты */
+
+.btn{  
+  border-radius: 4px;
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition : all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #f8a217;
+  color: #000;
+  box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+}
+.btn:active,
+.btn:focus{  
+  background-color: #000;
+  color: #f8a217;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+}
+.btn:hover{  
+  background-color: #000;
+  color: #f8a217;
+  box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 } 
