--- a/angular-blog/src/app/article-editor/article-editor.component.html
+++ b/angular-blog/src/app/article-editor/article-editor.component.html
@@ -1,60 +1,84 @@
 
 <div class="section">
-    <p>Your Blogs!!!</p>
-    <ul class="container" *ngIf="blogs.length>0;else noblogs">
+    <div class="container">
+        <p>Choose Blog!!!</p>
+        <ul *ngIf="blogs.length>0;else noblogs">
+            <li (click)="onClickBlog(blog)" *ngFor="let blog of blogs" >
+                <p >{{blog.name}} {{blog?.category?.name}}</p>
+            </li>
+        </ul>
         
-      <li class="card" *ngFor="let blog of blogs" >
-        <div class="card-header">
-              <div class="date">6 Oct 2017</div>
-              <img src="../../assets/images/samuro.jpg">
-        </div>
-        <div class="card-body" (click)="onClickBlog(blog)">
-            <span class="tag tag-teal">Technology</span>
-            <div class="user">
-              <div class="user-info">
-               <h2 style="color: black;">{{blog.name}}</h2>
-                <div>User: {{blog.user?.email}} </div>
+        <ng-template #noblogs>
+            <a routerLink="/newblog">
+                <!-- new blog -->
+                You dont have any blogs? Lets create one!!!
+            </a>
+        </ng-template>
+    </div>
+    <div class="section">
+        <div class="container">
+            <div class="row full-height justify-content-center">
+                <div class="col-12 text-center align-self-center py-5">
+                    <div class="section pb-5 pt-5 pt-sm-2 text-center">
+                        <h1 class="mb-4 pb-3">Create your Blog</h1>
+                        <div *ngIf="blog" class="card-3d-wrap mx-auto">
+                            <div class="card-3d-wrapper">
+                                <div class="card-front">
+                                    <div class="center-wrap">
+                                        
+                                            <form class="section text-center" [formGroup]="articleForm" (submit)="addNewArticle()">
+                                                <p class="form-wrap">Blog: {{blog.name}} </p>
+                                                <div class="form-wrap">
+                                                    <div class="form-group">
+                                                        <label for="title">Title*</label>
+                                                        <input class="form-style" name="title" formControlName="title" />
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="description">Description*</label>
+                                                        <textarea class="form-style" name="description" formControlName="description">Write yor text here</textarea>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label for="photo">Photo*</label>
+                                                        <input type="file" class="form-style" (change)="onFileSelected($event)" class="col form-field"  name="photo" formControlName="photo" />
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <button class="btn mt-4" [disabled]="!articleForm.valid" type="submit">Add new Article</button>
+                                                    </div>
+
+                                                </div>
+                                            </form>
+                                        
+                                  </div>
+                                </div>
+                          </div>
+                      </div>
+                  </div>
               </div>
-            </div>
         </div>
-         <!-- <button (click)="onClickBlog(blog)">
-          {{blog.id}},{{blog.name}},{{blog.idUser}},{{blog.user?.email}}
-         </button> -->
-      </li>
-      
-    </ul>
-    <ng-template #noblogs>
-        <a routerLink="/newblog">
-            <!-- new blog -->
-            You dont have any blogs? Lets create one!!!
-        </a>
-    </ng-template>
-    <!-- (click)="ShowArticleOfBlog(blog)" -->
-</div>
-
-
-<div class="d-flex flex-column align-items-center justify-content-center" *ngIf="blogs.length>0">
-    <p>Add your article!!!</p>
-    <div>Create new article</div>
-    <div *ngIf="blog">
-        <p>Article for your {{blog.name}} blog</p>
-        <form class="form w-50" [formGroup]="articleForm" (submit)="addNewArticle()">
-            <div class="row m-3">
-                <label for="title">Title*</label>
-                <input class="col form-field" name="title" formControlName="title" />
-            </div>
-            <div class="row m-3">
-                <label for="description">Description*</label>
-                <textarea class="col form-field" name="description" formControlName="description">Write yor text here</textarea>
-            </div>
-            <div class="row m-3">
-                <label for="photo">Photo*</label>
-                <input type="file" (change)="onFileSelected($event)" class="col form-field"  name="photo" formControlName="photo" />
-            </div>
-            <div class="row m-3">
-                <button class="col btn btn-primary" [disabled]="!articleForm.valid" type="submit">Add new Article</button>
-            </div>
-        </form>
     </div>
     
+    <!-- <div class="d-flex flex-column align-items-center justify-content-center" *ngIf="blogs.length>0">
+        <p>Add your article!!!</p>
+        <div *ngIf="blog">
+            <p>Article for your {{blog.name}} blog</p>
+            <form class="form w-50" [formGroup]="articleForm" (submit)="addNewArticle()">
+                <div class="row m-3">
+                    <label for="title">Title*</label>
+                    <input class="col form-field" name="title" formControlName="title" />
+                </div>
+                <div class="row m-3">
+                    <label for="description">Description*</label>
+                    <textarea class="col form-field" name="description" formControlName="description">Write yor text here</textarea>
+                </div>
+                <div class="row m-3">
+                    <label for="photo">Photo*</label>
+                    <input type="file" (change)="onFileSelected($event)" class="col form-field"  name="photo" formControlName="photo" />
+                </div>
+                <div class="row m-3">
+                    <button class="col btn btn-primary" [disabled]="!articleForm.valid" type="submit">Add new Article</button>
+                </div>
+            </form>
+        </div>
+        
+    </div> -->
 </div>
