--- a/angular-blog/src/app/article/article.component.css
+++ b/angular-blog/src/app/article/article.component.css
@@ -34,13 +34,7 @@ body {
   overflow: hidden;
   width: 600px;
 }
-.card:hover{
-  border-style: solid;
-  transition-property: border-color;
-  transition-timing-function: ease-in-out;
-  transition-duration: 1s;
-  border-color: orange;
-}
+
 .card-header {
   width: 100%;
   height: 350px;
@@ -61,6 +55,42 @@ body {
   min-height: 250px;
   background-color: #1d1d1d;
 }
+.hover {
+  background-image: linear-gradient(
+    to right,
+    #fb5400,
+    #54b3d6 50%,
+    #000 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+.hover:before{
+  content: '';
+  background: #ff6f00;
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+.hover:hover {
+ background-position: 0;
+}
+
+.hover:hover::before{
+  width: 100%;
+}
 .tag {
   background: #cccccc;
   border-radius: 50px;
@@ -80,7 +110,11 @@ body {
 .tag-pink {
   background-color: #cd5b9f;
 }
-
+.card-body a{
+  color: #fff;
+  font-weight: 650;
+  font-size: 1.7rem;
+}
 .card-body p {
   font-size: 13px;
   margin: 0 0 40px;
@@ -105,7 +139,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
 }
-.info{
+.info {
   display: flex;
   height: 100%;
   align-items: center;
