--- a/angular-blog/src/app/profile/profile.component.css
+++ b/angular-blog/src/app/profile/profile.component.css
@@ -3,6 +3,36 @@
 * {
   box-sizing: border-box;
 }
+.bn34 {
+  background: none;
+  cursor: pointer;
+  text-decoration: inherit;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: white;
+  padding: 0.7rem 2rem;
+  border-image-slice: 1;
+  
+}
+
+.bn11 {
+  padding: 0.5em 1.2em;
+  margin: 0 0.1em 0.1em 0;
+  border: 0.16em solid rgba(255, 255, 255, 0);
+  background-color: rgb(247, 88, 2);
+  border-radius: 1em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 300;
+  color: #ffffff;
+  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.bn11:hover {
+  border-color: rgb(255, 255, 255);
+}
 .section{
     margin-top: 10px;
     display: flex;
@@ -14,67 +44,80 @@
     
 }
 .container {
-    padding: 10px 10px 10px 10px;
   display: flex;
-  width: 1040px;
-  height: 950px;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  
+  width: 100%;
+  height:300px;
+  flex-direction: column;
+  justify-content: flex-start;
   border-radius: 7px;
   
+  border-bottom: solid #1d1d1d;
+  
 }
-.card {
-  margin: 10px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
-  overflow: hidden;
-  width: 300px;
+.switcher-wrap{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  height: 100%;
 }
-.card-header img {
+.switcher{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: last baseline;
+  align-content: center;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.switcher a{
+  color: rgb(255, 128, 0);
+}
+
+.user {
   width: 100%;
   height: 200px;
-  object-fit: cover;
-}
-.card-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 20px;
-  min-height: 250px;
-}
-
-.tag {
-  background: #cccccc;
-  border-radius: 50px;
-  font-size: 12px;
-  margin: 0;
-  color: #fff;
-  padding: 2px 10px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.tag-teal {
-  background-color: #47bcd4;
-}
-.tag-purple {
-  background-color: #5e76bf;
-}
-.tag-pink {
-  background-color: #cd5b9f;
-}
-
-.card-body p {
-  font-size: 13px;
-  margin: 0 0 40px;
-}
-.user {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;  
+}
+.user-header{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 40px;
+  padding-right: 40px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.user-info{
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+
+  
+}
+.user-info-name{
+  height: 100%;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+.user-info-name p{
+  margin: 0;
+  font-size: 1.9em;
 }
 
 .user img {
@@ -82,12 +125,7 @@
   width: 150px;
   height: 150px;
 }
-.user-info h5 {
-  margin: 0;
-}
-.user-info small {
-  color: #545d7a;
-}
+
 .date{
  position: absolute;
  margin-left: 10px;
@@ -114,13 +152,13 @@
  border-radius: 5px;
 }
 a {
- color: #000;
+ color: #fff;
  position: relative;
  text-decoration: none;
 }
 
 a::before {
- background: hsl(45 100% 70%);
+ background: #1d1d1d;
  content: "";
  inset: 0;
  position: absolute;
