--- a/angular-blog/src/app/profile/profile.component.html
+++ b/angular-blog/src/app/profile/profile.component.html
@@ -2,14 +2,70 @@
 <div class="section">
     <div class="container" *ngIf="currentUser">
         <div class="user">
-            <img src="../../assets/images/user.png">
             <div class="user-header">
-                <h2>{{currentUser.userName}}</h2>
+                <div class="user-info">
+                    <img src="../../assets/images/user.png">
+                    <div style="display: flex; align-items: center;">
+                        <div class="user-info-name">
+                            
+                            <h2>{{currentUser.userName}}</h2>
+                            <span>Subscribers: {{currentUser.subscribes?.length}}</span>
+                            
+                        </div>
+                        
+            
+                    </div>
+                </div>
             </div>
-            <div>
-                <span>Subscribers: {{currentUser.subscribes?.length}}</span>
-                <app-your-blogs></app-your-blogs>
+        </div>
+        <div class="switcher-wrap">
+            <div class="switcher">
+                <a id="1" (click)="switch($event)" class="bn34">YourBlogs</a>
+                <a id="2" (click)="switch($event)" class="bn34">Add New Blog</a>
+                <a id="3" (click)="switch($event)" class="bn34">Add New Article</a>
+                <a id="4" (click)="switch($event)" class="bn34">Subscribers</a>
             </div>
         </div>
     </div>
+    <div [ngSwitch]="state">
+        <div *ngSwitchCase="1">
+            <app-your-blogs></app-your-blogs>
+        </div>
+        <div  *ngSwitchCase="2">
+            <app-new-blog></app-new-blog>
+        </div>
+       
+        
+    </div>
+   
+        
+
+    
 </div>
+
+<!-- <div class="user-header">
+    <div class="user-info">
+        <img src="../../assets/images/user.png">
+        <div style="display: flex; align-items: center;">
+            <div class="user-info-name">
+                
+                <h2>{{currentUser.userName}}</h2>
+                <span>Subscribers: {{currentUser.subscribes?.length}}</span>
+                
+            </div>
+            
+
+        </div>
+    </div>
+
+    <div [ngSwitch]="state">
+            <div *ngSwitchCase="1">
+                <app-blog  [blogs]="userBlogs" [showBlog]="userBlogs" ></app-blog>
+            </div>
+            <div  *ngSwitchCase="2">
+                <app-subscribers  [subscribers]="user?.subscribes" [showSubscribers]="user?.subscribes" [user]="user"></app-subscribers>
+            </div>
+           
+            
+        </div>
+</div> -->
