--- a/angular-blog/src/app/your-blogs/your-blogs.component.css
+++ b/angular-blog/src/app/your-blogs/your-blogs.component.css
@@ -28,6 +28,64 @@ body {
   flex-wrap: wrap;
   padding: 0;
 }
+.hover {
+  background-image: linear-gradient(
+    to right,
+    #fb5400,
+    #54b3d6 50%,
+    #000 50%
+  );
+  background-size: 200% 100%;
+  background-position: -100%;
+  display: inline-block;
+  padding: 5px 0;
+  position: relative;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.3s ease-in-out;
+}
+
+.hover:before{
+  content: '';
+  background: #ff6f00;
+  display: block;
+  position: absolute;
+  bottom: -3px;
+  left: 0;
+  width: 0;
+  height: 3px;
+  transition: all 0.3s ease-in-out;
+}
+.delete{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: center;
+  height: 20px;
+}
+.hover:hover {
+ background-position: 0;
+}
+
+.hover:hover::before{
+  width: 100%;
+}
+.btn1{
+  background: none;
+  border: none;
+}
+.btn1 div{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+}
+.btn1 img{
+ width: 16px;
+ height: 16px;
+}
+
 .card {
   margin: 10px;
   background-color: #1d1d1d;
@@ -103,8 +161,7 @@ body {
   color: #545d7a;
 }
 .date{
- margin-left: 10px;
- margin-top: 5px;
+  color: #fff;
 }
 .blogs-header-wrap{
  width: 100%;
