--- a/angular-blog/src/app/user/user.component.html
+++ b/angular-blog/src/app/user/user.component.html
@@ -26,8 +26,7 @@
                 <div class="switcher">
                     <a id="1" (click)="switch($event)" class="bn34">Blogs</a>
                     <a id="2" (click)="switch($event)" class="bn34">Subscribers</a>
-                    <a id="3" (click)="switch($event)" class="bn34">Subscribers</a>
-                    <a id="4" (click)="switch($event)" class="bn34">Subscribers</a>
+                    <a id="3" (click)="switch($event)" class="bn34">Subscribes</a>
                 </div>
             </div>
         </div>
@@ -36,7 +35,10 @@
                 <app-blog  [blogs]="userBlogs" [showBlog]="userBlogs" ></app-blog>
             </div>
             <div  *ngSwitchCase="2">
-                <app-subscribers  [subscribers]="user?.subscribes" [showSubscribers]="user?.subscribes" [user]="user"></app-subscribers>
+                <app-subscribers  [subscribers]="user?.subscribes" [showSubscribers]="user?.subscribes"></app-subscribers>
+            </div>
+            <div  *ngSwitchCase="3">
+                <app-subscribes [subscribes]="subscribes" [showSubscribes]="subscribes" [user]="user"></app-subscribes>
             </div>
            
             
